restaurant testing